--- a/src/main/resources/templates/editartareaAdmin.html
+++ b/src/main/resources/templates/editartareaAdmin.html
@@ -29,15 +29,22 @@
         <td><input type="text" th:field="*{descripcion}" /></td>
       </tr>
       <tr>
-        <td><label>Estado (1=Activo, 0=Inactivo): </label></td>
-        <td><input type="number" min="0" max="1" th:field="*{estado}" /></td>
+        <td><label>Estado (1=Completada, 0=Pendiente): </label></td>
+<!--        <td><input type="number" min="0" max="1" th:field="*{estado}" /></td>-->
+<!--        convert to select-->
+        <td>
+          <select th:field="*{estado}">
+                <option th:value="0" th:text="Pendiente"></option>
+                <option th:value="1" th:text="Completa"></option>
+         </select>
+        </td>
       </tr>
         <tr>
             <td><label>NIF: </label></td>
             <td><input type="text" th:field="*{usuario.nif}" /></td>
         <tr>
         <td>
-          <button type="submit">Guardar nueva tarea</button>
+          <button type="submit" class="btn btn-success">Guardar nueva tarea</button>
         </td>
       </tr>
     </table>
