--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Inicio</title>
 </head>
 <body>
 <div th:insert="fragmento.html"> </div>
@@ -14,5 +14,9 @@
 </ul>
 </div>
 </nav>
+
+<h1>¡Bienvenido a la página web!</h1>
+<p> Explora las acciones ubicadas en la barra de navegación.</p>
+
 </body>
 </html>
