--- a/src/main/resources/templates/informa.html
+++ b/src/main/resources/templates/informa.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Actualización!</title>
 </head>
 <body>
 <div th:insert="fragmento.html"> </div>
@@ -17,8 +17,5 @@
 <h1>
     <span th:text="${sms}"></span>
 </h1>
-<p>
-    <a th:href="@{/admin}">Portal de administrador</a>
-</p>
 </body>
 </html>
