--- a/src/main/resources/templates/nuevatareaAdmin.html
+++ b/src/main/resources/templates/nuevatareaAdmin.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>Nueva Tarea</title>
 </head>
 <body>
 <div th:insert="fragmento.html"> </div>
@@ -32,7 +32,7 @@
       </tr>
       <tr>
         <td>
-          <button type="submit">Guardar nueva tarea</button>
+          <button type="submit" class="btn btn-success">Guardar nueva tarea</button>
         </td>
       </tr>
     </table>
