--- a/src/main/resources/templates/denegado.html
+++ b/src/main/resources/templates/denegado.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>403: Acceso denegado</title>
 </head>
 <body>
 <div th:insert="fragmento.html"> </div>
@@ -14,6 +14,8 @@
 </ul>
 </div>
 </nav>
-  <h1>403: Acceso denegado</h1>
+    <h1>403: Acceso denegado</h1>
+    <p>Usted no tiene permiso para acceder a esta página.</p>
+    <p> En caso de que exista algún problema, no dude en contactar con el administrador.</p>
 </body>
 </html>
