--- a/src/main/resources/templates/fragmento.html
+++ b/src/main/resources/templates/fragmento.html
@@ -18,5 +18,8 @@
             <li class="nav-item">
                 <a class="nav-link" th:href="@{/admin}">Panel de Administrador</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/admin/dashboard}">Dashboard</a>
+            </li>
         </ul>
 
